--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.5.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/mongodb": "^3.5.25",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.50",
     "typescript": "^3.9.6"
