--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server/server.ts"
+    "dev": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,15 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/mongodb": "^3.5.25",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.50",
     "typescript": "^3.9.6"
