--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -20,6 +20,7 @@
     ],
     "rules": {
     "prettier/prettier": "error",
+    "import/prefer-default-export": "off",
     "class-methods-use-this": "off",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/naming-convention": [
