--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/mongodb": "^3.5.25",
+    "@types/node": "^14.0.22",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
     "eslint": "^7.4.0",
