--- a/backend/package.json
+++ b/backend/package.json
@@ -10,26 +10,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.5.9"
+    "mongodb": "^3.6.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
-    "@types/express": "^4.17.7",
-    "@types/mongodb": "^3.5.25",
-    "@types/node": "^14.0.22",
-    "@typescript-eslint/eslint-plugin": "^3.6.0",
-    "@typescript-eslint/parser": "^3.6.0",
-    "eslint": "^7.4.0",
+    "@types/express": "^4.17.8",
+    "@types/mongodb": "^3.5.27",
+    "@types/node": "^14.6.4",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "@types/cors": "^2.8.7",
+    "eslint": "^7.8.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.1",
     "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0-pre.50",
+    "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^3.9.7"
   }
 }
